Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4762

lctl set_param should return error when the value of the parameter is null

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.5.0, Lustre 2.6.0
    • None
    • 3
    • 13098

      This problem was found by LU-4748 when MDSCOUNT=2

      #lctl set_param lov.*mdtlov*.qos_threshold_rr=17% 17%
      lov.lustre-MDT0000-mdtlov.qos_threshold_rr=17%
      lov.lustre-MDT0001-mdtlov.qos_threshold_rr=17%
      

      Also, it's easy to be found by running the following commands:

      #lctl set_param debug_mb
      #lctl set_param fail_loc=
      fail_loc=
      

      I will push a patch later.

            emoly.liu Emoly Liu
            emoly.liu Emoly Liu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: